src/objects/BMCServiceDesk__WebAPIConfiguration__c.object
<CustomObject>
    <description>Stores the web API service configurations data.</description>
    <fields>
        <fullName>BMCServiceDesk__Call_Web_API_on_Task_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Call Web API on closed tasks</description>
        <inlineHelpText>Select this check box to allow the service call for the closed tasks.</inlineHelpText>
        <label>Call Web API on Task Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Certificate_Name__c</fullName>
        <inlineHelpText>Specify certificate name to call a service.</inlineHelpText>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HTTPBody__c</fullName>
        <inlineHelpText>Specify the request body of the service.</inlineHelpText>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HTTPHeaders__c</fullName>
        <inlineHelpText>Specify HTTP headers of the request.</inlineHelpText>
        <label>Request Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HTTP_Content_Type__c</fullName>
        <description>HTTP Request Content Type</description>
        <inlineHelpText>Specify HTTP content type of the service.</inlineHelpText>
        <label>Request Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JSON</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Hours__c</fullName>
        <inlineHelpText>Number of hours allowed for an API call to be made after a task is closed.</inlineHelpText>
        <label>Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HttpMethod__c</fullName>
        <inlineHelpText>Select the REST method to be called for the service.</inlineHelpText>
        <label>Request Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you are using a sandbox.</inlineHelpText>
        <label>Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Request_Target_Namespace__c</fullName>
        <description>Specify target namespace of the service.</description>
        <inlineHelpText>SOAP Target Namespace</inlineHelpText>
        <label>Request Target Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Required_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box if the web API call needs certificate.</inlineHelpText>
        <label>Required Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SOAP_Method_Name__c</fullName>
        <description>Specify SOAP Method Name</description>
        <inlineHelpText>Specify SOAP Method Name</inlineHelpText>
        <label>SOAP Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Security_Type__c</fullName>
        <inlineHelpText>Specify security type of the service.</inlineHelpText>
        <label>Security Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Identity__c</fullName>
        <inlineHelpText>Specify user name to authenticate the service.</inlineHelpText>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Pass_phrase__c</fullName>
        <inlineHelpText>Specify password to authenticate the service.</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Type__c</fullName>
        <inlineHelpText>Select the service type.</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SoapBasic</fullName>
                </value>
                <value>
                    <fullName>RestService</fullName>
                </value>
                <value>
                    <fullName>SoapAdvance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_URL__c</fullName>
        <inlineHelpText>Specify the end-point URL of the service.</inlineHelpText>
        <label>Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Web API Configuration</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Web API Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web API Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__UniqueWebAPIConfigIdCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP(  $ObjectType.BMCServiceDesk__WebAPIConfiguration__c.Fields.Name , $ObjectType.BMCServiceDesk__WebAPIConfiguration__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__WebAPIConfiguration__c.Fields.Name, $ObjectType.BMCServiceDesk__WebAPIConfiguration__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>Web API Configuration name already exists. Enter a unique name.</errorMessage>
    </validationRules>
</CustomObject>